Fix [Artifacts]  Align 'Name' column in Artifacts and ML function view

--- a/src/elements/TableLinkCell/tableLinkCell.scss
+++ b/src/elements/TableLinkCell/tableLinkCell.scss
@@ -31,6 +31,7 @@
   .date-uid-row {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     font-weight: normal;
     font-size: 12px;
     font-family: Roboto, sans-serif;
